Add ability to add links to open position summary

--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -13,47 +13,47 @@
   url: https://skylight.workable.com/jobs/1083508
   category: Product
   location: Remote
-  summary: Multiple positions open. Help the U.S. Department of Health and Human Services respond to the COVID-19 crisis and protect public health, or work with the U.S. Air Force to modernize how personal protective equipment is managed.
+  summary: "Multiple positions open. Help the U.S. Department of Health and Human Services respond to the COVID-19 crisis and protect public health, or work with the U.S. Air Force to modernize how personal protective equipment is managed."
   order: 10
 - title: UX Designer
   url: https://skylight.workable.com/jobs/1128366
   category: Design
   location: Remote
-  summary: Help the U.S. Department of Health and Human Services respond to the COVID-19 crisis and protect public health.
+  summary: "Help the U.S. Department of Health and Human Services respond to the COVID-19 crisis and protect public health."
   order: 20
 - title: UX Researcher
   url: https://apply.workable.com/skylight/j/681D1CD9D5/
   category: Research
   location: Remote
-  summary: Help the U.S. Department of Health and Human Services respond to the COVID-19 crisis and protect public health.
+  summary: "Help the U.S. Department of Health and Human Services respond to the COVID-19 crisis and protect public health."
   order: 30
 - title: Content Strategist
   url: https://apply.workable.com/skylight/j/ECC220A063/
   category: Design
   location: Remote
-  summary: Help the U.S. Department of Health and Human Services respond to the COVID-19 crisis and protect public health.
+  summary: "Help the U.S. Department of Health and Human Services respond to the COVID-19 crisis and protect public health."
   order: 40
 - title: Sofware Engineer
   url: https://skylight.workable.com/jobs/1083190
   category: Engineering
   location: Remote
-  summary: Multiple positions open. Help the U.S. Department of Health and Human Services respond to the COVID-19 crisis and protect public health, or work with the U.S. Air Force to solve critical problems such as how personal protective equipment is managed.
+  summary: "Multiple positions open. Help the U.S. Department of Health and Human Services respond to the COVID-19 crisis and protect public health, or work with the U.S. Air Force to solve critical problems such as how personal protective equipment is managed."
   order: 50
 - title: DevOps Engineer
   url: https://skylight.workable.com/jobs/1083314
   category: Engineering
   location: Remote
-  summary: Work with the U.S. Air Force to solve critical problems such as how personal protective equipment is managed.
+  summary: "Work with the U.S. Air Force to solve critical problems such as how personal protective equipment is managed."
   order: 60
 - title: Data Engineer
   url: https://apply.workable.com/skylight/j/C344212DDE/
   category: Data
   location: Remote
-  summary: Help the Connecticut Office of Early Childhood better leverage data in support of families with young children.
+  summary: "Help the Connecticut Office of Early Childhood better leverage data in support of families with young children."
   order: 70
 - title: Vice President of Delivery Excellence
   url: https://apply.workable.com/skylight/j/2D3D1B7688/
   category: Business Strategy & Operations
   location: Remote
-  summary: Make Skylight the premiere provider of digital government consulting services.
+  summary: "Make Skylight the premiere provider of digital government consulting services."
   order: 80
