update about page

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -831,7 +831,7 @@
     in Mogadishu, Somalia. He's currently completing a PhD in design at Carnegie Mellon,
     and specializes in design-centric approaches to advanced technology fields such as
     artificial intelligence. Mitchell lives in Pennsylvania.
-  active: true
+  active: false
   order: 25
   socials:
     - name: Twitter
