update team locations

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -670,7 +670,7 @@
     Abby is a former member of the U.S. Digital Service, who is
     drawn to complex problems and passionate about improving the human
     experience of technology. She specializes in product management and
-    UX research. Abby lives in Illinois.
+    UX research. Abby lives in Texas.
   active: true
   order: 80
   socials:
@@ -792,7 +792,7 @@
     Ashley is a UX researcher and designer, with a background in information
     design and data visualization. As a Design Fellow for the social
     impact incubator, Blue Ridge Labs, she launched and co-founded JustFix.nyc.
-    Ashley currently teaches UX design at General Assembly. She lives in New York.
+    Ashley currently teaches UX design at General Assembly. She lives in Rhode Island.
   active: true
   order: 110
   socials:
