update emp profile

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1157,7 +1157,7 @@
     the healthcare tech space. She also executed strategic and financial
     projects for the City of Chicago, where she worked while she pursued her
     MBA at the University of Chicago Booth School of Business.
-    Mical lives in Illinois.
+    Mical lives in Massachusetts.
   active: true
   order: 260
   socials:
