--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -39,21 +39,27 @@
   location: Remote
   summary: "Multiple positions open. Help the U.S. Department of Health and Human Services respond to the COVID-19 crisis and protect public health, or work with the U.S. Air Force to solve critical problems such as how personal protective equipment is managed."
   order: 50
+- title: Sofware Engineer (Mobile)
+  url: https://apply.workable.com/skylight/j/CC7A121F25/
+  category: Engineering
+  location: Remote
+  summary: "Create a mobile application development platform to accelerate the development of native mobile apps across the U.S. Air Force."
+  order: 60
 - title: DevOps Engineer
   url: https://skylight.workable.com/jobs/1083314
   category: Engineering
   location: Remote
   summary: "Work with the U.S. Air Force to solve critical problems such as how personal protective equipment is managed."
-  order: 60
+  order: 70
 - title: Data Engineer
   url: https://apply.workable.com/skylight/j/C344212DDE/
   category: Data
   location: Remote
   summary: "Help the Connecticut Office of Early Childhood better leverage data in support of families with young children."
-  order: 70
+  order: 80
 - title: Vice President of Delivery Excellence
   url: https://apply.workable.com/skylight/j/2D3D1B7688/
   category: Business Strategy & Operations
   location: Remote
   summary: "Make Skylight the premiere provider of digital government consulting services."
-  order: 80
+  order: 90
