Turn off smart quotes

--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,8 @@ posts_min_common_tags: 2
 
 # Build settings
 markdown: kramdown
+kramdown:
+  smart_quotes: ["apos", "apos", "quot", "quot"]
 
 collections:
   projects:
