update open positions

--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -49,3 +49,8 @@
   category: Data
   location: Remote
   order: 80
+- title: VP of Human Services
+  url: https://apply.workable.com/skylight/j/9E1132A1B6/
+  category: Business Strategy & Operations
+  location: Remote
+  order: 90
