--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1207,7 +1207,7 @@
   profile_path: /company/about/#eric-richards
   image: /img/people/eric-richards.jpg
   image_description: Photo of Eric Richards
-  position: UX Designer
+  position: UX Researcher
   bio: >
     Eric is a current undergraduate student at UC San Diego studying
     Human-Computer Interaction and Design for Social Innovation. He was a
