--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1209,12 +1209,10 @@
   image_description: Photo of Eric Richards
   position: UX Researcher
   bio: >
-    Eric is a current undergraduate student at UC San Diego studying
-    Human-Computer Interaction and Design for Social Innovation. He was a
-    2019 Civic Digital Fellow where he worked as a part of 18F Strategy on
-    10x projects. He's also a studio lead for Design for America and conducts
-    civic design research for the city-wide Design for San Diego 2020 initiative.
-    Eric lives in California.
+    Eric is a UX researcher and designer, with a passion for co-creation and
+    tackling complex social challenges. He was a 2019 Civic Digital Fellow at
+    18F and graduated from UC San Diego with degrees in Human-Computer Interaction
+    and Design for Social Innovation. Eric lives in California. 
   active: true
   order: 280
   socials:
