--- a/_data/values.yml
+++ b/_data/values.yml
@@ -85,6 +85,5 @@
     Giving back strengthens our communities, brings people together, provides us valuable
     experience, and makes us more engaged in our work. Giving back takes many forms from volunteering
     to sharing our collective knowledge (for example, via blog posts and open-source contributions).
-    As a HUBZone, it's also about creating greater economic opportunities for the Chapel Hill, North Carolina
-    community and beyond.
+    As a HUBZone, it's also about fueling economic growth in historically underutilized business zones.
   order: 140
