--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -34,7 +34,7 @@
   category: Engineering
   location: Remote
   order: 50
-- title: Sofware Engineer (Mobile)
+- title: Mobile Software Engineer
   url: https://apply.workable.com/skylight/j/CC7A121F25/
   category: Engineering
   location: Remote
