--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -6,27 +6,27 @@
 #   order: 10
 
 # Categories:
-# Research, Design, Product, Engineering, Data, Delivery Management,
+# Research & Design, Product & Delivery, Engineering, Data,
 # Procurement, Transformation, Business Strategy & Operations
 
 - title: Product Manager
   url: https://skylight.workable.com/jobs/1083508
-  category: Product
+  category: Product & Delivery
   location: Remote
   order: 10
 - title: Product Designer
   url: https://skylight.workable.com/jobs/1128366
-  category: Design
+  category: Research & Design
   location: Remote
   order: 20
 - title: UX Researcher
   url: https://apply.workable.com/skylight/j/681D1CD9D5/
-  category: Research
+  category: Research & Design
   location: Remote
   order: 30
 - title: Content Strategist
   url: https://apply.workable.com/skylight/j/ECC220A063/
-  category: Design
+  category: Research & Design
   location: Remote
   order: 40
 - title: Sofware Engineer
@@ -34,23 +34,18 @@
   category: Engineering
   location: Remote
   order: 50
-- title: Mobile Software Engineer
-  url: https://apply.workable.com/skylight/j/CC7A121F25/
-  category: Engineering
-  location: Remote
-  order: 60
 - title: DevOps Engineer
   url: https://skylight.workable.com/jobs/1083314
   category: Engineering
   location: Remote
-  order: 70
+  order: 60
 - title: Data Engineer
   url: https://apply.workable.com/skylight/j/C344212DDE/
   category: Data
   location: Remote
-  order: 80
+  order: 70
 - title: VP of Human Services
   url: https://apply.workable.com/skylight/j/9E1132A1B6/
   category: Business Strategy & Operations
   location: Remote
-  order: 90
+  order: 80
