careers page update

--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -1,6 +1,7 @@
 # Sample element:
 # - title: DevOps Engineer
 #   url: https://skylight.workable.com/jobs/604049
+#   category: Engineering
 #   location: Washington DC
 #   summary: Save lives
 #   order: 10
