--- a/_data/toolkits.yml
+++ b/_data/toolkits.yml
@@ -140,13 +140,15 @@ agile_procurement_playbook:
 
 managing_technical_debt:
   title: Managing Technical Debt Guide
-  description: A guide on how to manage technical debt.
+  description: A guide on how to manage technical debt in software development projects.
   toc:
     - title: Introduction
       url: /work/toolkits/managing-technical-debt/
-    - title: What is technical debt?
+    - title: What technical debt is
       url: /work/toolkits/managing-technical-debt/what-is-technical-debt/
     - title: Managing technical debt
       url: /work/toolkits/managing-technical-debt/managing-technical-debt/
     - title: Preventing technical debt
       url: /work/toolkits/managing-technical-debt/preventing-technical-debt/
+    - title: Additional resources
+      url: /work/toolkits/managing-technical-debt/resources/
