--- a/_data/values.yml
+++ b/_data/values.yml
@@ -84,6 +84,5 @@
   statement: >
     Giving back strengthens our communities, brings people together, provides us valuable
     experience, and makes us more engaged in our work. Giving back takes many forms from volunteering
-    to sharing our collective knowledge (for example, via blog posts and open-source contributions).
-    As a HUBZone, it's also about fueling economic growth in historically underutilized business zones.
+    to sharing our collective knowledge.
   order: 140
