--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site settings
 title: Skylight - Digital Government Consulting
 email: hello@skylight.digital
-description: Skylight is a consultancy driven by making government work in a digital world.
+description: Skylight is a digital consultancy using design and technology to help government agencies deliver better public services.
 keywords: digital consulting, digital government, digital transformation, digital services
 published: 2017-06-18
 modified: 2020-05-29
