--- a/_data/team.yml
+++ b/_data/team.yml
@@ -551,7 +551,7 @@
   profile_path: /company/about/#brandon-mader
   image: /img/people/brandon-mader.jpg
   image_description: Photo of Brandon Mader
-  position: Data Scientist
+  position: Data Scientist & Engineer
   bio: >
     Brandon is a recent graduate of Dartmouth College, where he earned
     a double major in Math and Computer Science. He's passionate about making
