--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1621,9 +1621,10 @@
   image_description: Photo of Rebecca Lubitz-Marchena
   position: UX Content Strategist
   bio: >
-    Rebecca is a content strategist, designer, and writer with a passion for creating great
-    experiences through human-centered content. She most recently worked for Intuit. Rebecca
-    lives in California.
+    Rebecca is a content strategist with a background in product marketing,
+    UX writing, and localization. She enjoys turning complex concepts into plain
+    language and creating great experiences through human-centered content.
+    Rebecca lives in California.
   active: true
   order: 420
   socials:
