update open positions

--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -30,3 +30,8 @@
   category: Engineering
   location: Remote
   order: 40
+- title: Administrative Assistant
+  url: https://apply.workable.com/skylight/j/A990F0E5FE/
+  category: Business Strategy & Operations
+  location: Sarasota, FL
+  order: 50
