update open positions

--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -40,3 +40,18 @@
   category: Business Strategy & Operations
   location: Remote
   order: 60
+- title: Software Engineer Intern
+  url: https://apply.workable.com/skylight/j/E92D7D4AB2/
+  category: Engineering
+  location: Remote
+  order: 70
+- title: Product Designer Intern
+  url: https://apply.workable.com/skylight/j/ECC895798D/
+  category: Research & Design
+  location: Remote
+  order: 80
+- title: Content Strategist Intern
+  url: https://apply.workable.com/skylight/j/68DA152865/
+  category: Research & Design
+  location: Remote
+  order: 90
