update open positions

--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -55,3 +55,8 @@
   category: Research & Design
   location: Remote
   order: 90
+- title: UX Researcher
+  url: https://apply.workable.com/skylight/j/681D1CD9D5/
+  category: Research & Design
+  location: Remote
+  order: 100
