update about page

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -932,7 +932,7 @@
   profile_path: /company/about/#amelia-wellers
   image: /img/people/amelia-wellers.jpg
   image_description: Photo of Amelia Wellers
-  position: Engagement Manager
+  position: Product Manager
   bio: >
     Amelia is a builder at heart. A recent graduate of Cornell Tech's MBA
     program, she has expertise in product management, digital strategy,
