update open positions

--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -60,3 +60,8 @@
   category: Research & Design
   location: Remote
   order: 100
+- title: DevOps Engineer
+  url: https://apply.workable.com/skylight/j/049D09E1D3/
+  category: Engineering
+  location: Remote
+  order: 110
