--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -65,3 +65,8 @@
   category: Engineering
   location: Remote
   order: 110
+- title: VP of Training Services
+  url: https://apply.workable.com/skylight/j/FB764D28B5/
+  category: Business Strategy & Operations
+  location: Sarasota, FL
+  order: 120
