update open position

--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -68,5 +68,5 @@
 - title: VP of Training Services
   url: https://apply.workable.com/skylight/j/FB764D28B5/
   category: Business Strategy & Operations
-  location: Sarasota, FL
+  location: Remote
   order: 120
