--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -35,8 +35,8 @@
   category: Business Strategy & Operations
   location: Sarasota, FL
   order: 50
-- title: Diversity Recruiter
-  url: https://apply.workable.com/skylight/j/64E6A4C2EA/
+- title: Head of Talent
+  url: https://apply.workable.com/skylight/j/FB764D28B5/
   category: Business Strategy & Operations
   location: Remote
   order: 60
