--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1679,3 +1679,23 @@
       link: https://www.linkedin.com/in/jamie-song-a7198238/
       link_description: Joe's LinkedIn Account
       fa_icon_name: linkedin
+- name: jamie-song
+  fname: Ori
+  lname: Song
+  full_name: Ori Song
+  short_name: J. Song
+  profile_path: /company/about/#jamie-song
+  image: /img/people/jamie-song.png
+  image_description: Illustration of Jamie Song
+  position: Product Manager
+  bio: >
+    Jamie is a product manager with a passion for good, clean product experiences.
+    She excels at leading and managing cross-functional teams across the entire product
+    lifecycle. Jamie lives in Washington DC.
+  active: true
+  order: 440
+  socials:
+    - name: LinkedIn
+      link: https://www.linkedin.com/in/jamie-song-a7198238/
+      link_description: Joe's LinkedIn Account
+      fa_icon_name: linkedin
