--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1694,7 +1694,7 @@
   order: 450
   socials:
     - name: Twitter
-      link: https://twitter.com/ohoffer
+      link: https://twitter.com/orihoffer
       link_description: Ori's Twitter Account
       fa_icon_name: twitter
     - name: LinkedIn
